--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Simple Chat App</title>
 </head>
 <body>
-
+hello world
 <input type="text" id="name" placeholder="Enter your name" required>
 <input type="text" id="message" placeholder="Enter a message" required>
 <button onclick="sendMessage()">Send</button>
